# fuzzy-json-repair

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml  test.yml
fuzzy_json_repair/: __init__.py  repair.py
tests/: test_repair.py
